# toneguard

./: .gitignore  Cargo.toml  LICENSE  README.md  agents.md  flow-blueprint-mapping.yml  layth-style.yml
.github/workflows/: publish-extension.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: arch.rs  blueprint.rs  cfg.rs  coverage.rs  dfg.rs  flow.rs  lib.rs  organize.rs  symbols.rs
core/tests/: blueprint.rs  validation.rs
docs/: llm-coding-failure-modes.md
examples/: layth-style.md  sample.md
examples/slop/: deploy.sh
flows/: cli-calibrate.md  cli-comments.md  cli-lint.md  flow-audit.md  flow-blueprint-diff.md  flow-blueprint.md  flow-callgraph.md  flow-propose.md  lsp-diagnostics.md
lsp/: Cargo.toml
lsp/src/: main.rs
reports/: flow-audit.json  flow-proposal.md
scripts/: blueprint-refactor-guard.sh  build-binaries.sh  install-local.sh
vscode-extension/: .eslintrc.cjs  .vscodeignore  README.md  convert-icon.js  package-lock.json  package.json  tsconfig.json
vscode-extension/config/: layth-style.yml
vscode-extension/skills/: toneguard-logic-flow-skill.md  toneguard-skill.md
vscode-extension/src/: extension.ts
vscode-extension/webview/: build.ts  tailwind.config.cjs  tsconfig.json  vite.config.ts
vscode-extension/webview/src/: global.d.ts  styles.css
vscode-extension/webview/src/components/: Badge.tsx  Button.tsx  Card.tsx  Graph.tsx  Input.tsx  ListItem.tsx  Row.tsx  Tabs.tsx  index.ts
vscode-extension/webview/src/dashboard/: main.tsx
vscode-extension/webview/src/flowmap/: main.tsx
vscode-extension/webview/src/preview/: main.tsx
vscode-extension/webview/src/shared/: escape.ts  theme.ts  vscode.ts
