[workspace]
members = ["core", "cli", "lsp"]
resolver = "2"

[workspace.package]
authors = ["Layth M. Qassem"]
license = "MIT"
edition = "2021"
version = "0.1.47"

[workspace.dependencies]
aho-corasick = "0.7"
anyhow = "1"
console = "0.15"
globset = "0.4"
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
unicode-segmentation = "1.10"
walkdir = "2"

[workspace.lints.rust]
unsafe_code = "forbid"
