[package]
name = "dwg-cli"
edition = "2021"
version = "0.1.74"
description = "Command-line interface for the Deterministic Writing Guard style linter."
license = "MIT"
repository = "https://github.com/editnori/toneguard"
homepage = "https://github.com/editnori/toneguard"
documentation = "https://github.com/editnori/toneguard"
keywords = ["lint", "writing", "style"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
console = { workspace = true }
dwg-core = { path = "../core", version = "0.1.74" }
globset = { workspace = true }
pathdiff = "0.2"
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = "0.10"
syn = { version = "2", features = ["full", "visit"] }
tree-sitter = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-typescript = "0.23.2"
walkdir = { workspace = true }
