[package]
name = "dwg-core"
edition = "2021"
version = "0.1.36"
description = "Deterministic Writing Guard core analysis engine for spotting AI-styled prose."
license = "MIT"
repository = "https://github.com/editnori/toneguard"
homepage = "https://github.com/editnori/toneguard"
documentation = "https://github.com/editnori/toneguard"
keywords = ["lint", "writing", "style"]
categories = ["text-processing"]

[lib]
name = "dwg_core"
path = "src/lib.rs"

[dependencies]
aho-corasick = { workspace = true }
anyhow = { workspace = true }
globset = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
unicode-segmentation = { workspace = true }
walkdir = { workspace = true }
