[package]
name = "dwg-core"
edition = "2021"
version = "0.1.37"
description = "Deterministic Writing Guard core analysis engine for spotting AI-styled prose."
license = "MIT"
repository = "https://github.com/editnori/toneguard"
homepage = "https://github.com/editnori/toneguard"
documentation = "https://github.com/editnori/toneguard"
keywords = ["lint", "writing", "style"]
categories = ["text-processing"]

[lib]
name = "dwg_core"
path = "src/lib.rs"

[dependencies]
aho-corasick = { workspace = true }
anyhow = { workspace = true }
globset = { workspace = true }
once_cell = { workspace = true }
proc-macro2 = { version = "1", features = ["span-locations"] }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
syn = { version = "2", features = ["full", "visit"] }
thiserror = { workspace = true }
tree-sitter = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-typescript = "0.23.2"
unicode-segmentation = { workspace = true }
walkdir = { workspace = true }
