[package]
name = "dwg-lsp"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Language Server Protocol implementation for ToneGuard AI slop detection"

[[bin]]
name = "dwg-lsp"
path = "src/main.rs"

[dependencies]
dwg-core = { path = "../core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"
dashmap = "6"
